Use java 22 ready.