@@ -20,35 +20,10 @@
 
     <properties>
         <!-- Java Version-->
-        <java.version>21</java.version>
+        <java.version>22</java.version>
 
         <!-- Plugins Versioning-->
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <maven.javadoc.plugin.version>3.6.0</maven.javadoc.plugin.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin.version}</version>
-                <configuration>
-                    <release>21</release>
-                    <additionalOptions>--enable-preview</additionalOptions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
